--- a/app/views/stops/index.html.erb
+++ b/app/views/stops/index.html.erb
@@ -1,13 +1,15 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<div class="container" style="text-align:center">
 
-    <h1>Stops</h1>
-    <ul>
-    <% @stops.each do |stop| %>
-        <li>
-        <a href="/stops/ <%= stop.id%>">
-        <%= stop.id %>
-        </li>
-    <% end %>
-    </ul>
+<div class="container-fluid bg-secondary" style="text-align:center ">
+    <div class="container-sm bg-light">
+        <h1>Stops</h1>
+        <ul>
+        <% @stops.each do |stop| %>
+            <li style="text-align:center">
+            <a  href="/stops/ <%= stop.id%>">
+            <%= stop.StopNumber %>
+            </li>
+        <% end %>
+        </ul>
+    </div>
 </div>
