--- a/app/views/stops/show.html.erb
+++ b/app/views/stops/show.html.erb
@@ -1,8 +1,16 @@
-<h1><%= @stop.StopNumber %></h1>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<p><%= @stop.StopDescription %></p>
-<p><%= @stop.Error %></p>
-<p><%= @stop.RouteNumber %></p>
-<p><%= @stop.RouteDirectionID %></p>
-<p><%= @stop.RouteDirection %></p>
-<p><%= @stop.RouteHeading %></p>
+<div class="container-fluid bg-secondary"style="text-align:center">
+
+    <div class="container-sm bg-light">
+        
+        <h1>Stop Number <%= @stop.StopNumber %></h1>
+
+        <p>Stop Description <%= @stop.StopDescription %></p>
+        <p>Error <%= @stop.Error %></p>
+        <p>Route Number <%= @stop.RouteNumber %></p>
+        <p><%= @stop.RouteDirectionID %></p>
+        <p><%= @stop.RouteDirection %></p>
+        <p><%= @stop.RouteHeading %></p>
+    </div>
+</div>
